k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oms-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /inventory
            pathType: Prefix
            backend:
              service:
                name: inventory
                port:
                  number: 8000
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: order
                port:
                  number: 8000
          - path: /shipping
            pathType: Prefix
            backend:
              service:
                name: shipping
                port:
                  number: 8000
